# picosat-eps-command-telemetry-node

./: .gitignore  README.md
bench_artifacts/: README.md  commanded_power_demo_20260606_003430.txt  one_pico_eps_cpp_demo_20260601_235703.txt  stage2_rs485_demo_20260602_142519.txt
docs/: README.md  architecture.md  bench_validation.md  commanded_power_load.md  cpp_sdk_bringup.md  demo_script.md  ina219_telemetry.md  micropython_recovery.md  oled_status_display.md  protocol.md  stage2_rs485_plan.md  wiring_pinout.md
firmware/common/: eps_app.cpp  eps_app.hpp  protocol.cpp  protocol.hpp
firmware/eps_node/: CMakeLists.txt  display_status.cpp  display_status.hpp  ina219.cpp  ina219.hpp  main.cpp  main_uart.cpp  ssd1306.cpp  ssd1306.hpp
firmware/micropython_fallback/: README.md  main.py
firmware/obc_bridge/: main.cpp
firmware/tests/: test_eps_app.cpp
tests/: test_protocol.py
tools/: build_pico_sdk.sh  check_host.sh  ground_station.py  protocol.py  run_demo.sh  run_power_check.sh  run_power_demo.sh
